--- a/vue-news/jsconfig.json
+++ b/vue-news/jsconfig.json
@@ -7,6 +7,12 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@src": [
+        "src/*"
+      ],
+      "@assets": [
+        "src/assets/*"
       ]
     },
     "lib": [
