--- a/vue_3-post/package.json
+++ b/vue_3-post/package.json
@@ -2,16 +2,18 @@
   "name": "vue_3-post",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "db": "json-server --watch db.json"
   },
   "dependencies": {
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.15",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1"
+    "bootstrap-icons": "^1.8.1",
+    "vue": "^3.2.33",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
@@ -19,6 +21,7 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "json-server": "^0.17.4",
     "prettier": "^2.5.1",
     "vite": "^2.9.5"
   }
