--- a/vue_3-post/package.json
+++ b/vue_3-post/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "json-server": "^0.17.4",
     "prettier": "^2.5.1",
+    "sass": "^1.83.0",
     "vite": "^2.9.5"
   }
 }
