--- a/vue_3-post/package.json
+++ b/vue_3-post/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "dayjs": "^1.11.13",
+    "pinia": "^2.3.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.15"
   },
