--- a/vue_nuxt/package.json
+++ b/vue_nuxt/package.json
@@ -3,30 +3,31 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxi build",
-    "dev": "nuxi dev",
-    "generate": "nuxi generate",
-    "preview": "nuxi preview",
-    "postinstall": "nuxi prepare",
-    "lint": "eslint \"**/*.{ts,tsx,vue,js}\" --fix",
-    "lint-eslint": "eslint --ignore-path .gitignore **/*{ts,tsx,vue,js,json} --fix",
-    "lint-prettier": "prettier --write \"**/*.(ts|tsx|vue|js|json)\""
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@quasar/extras": "^1.16.15",
+    "nuxt": "^3.15.1",
+    "quasar": "^2.17.6",
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.18.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-vue": "^9.32.0",
-    "nuxt": "^3.9.0",
+    "nuxt-quasar-ui": "^2.1.9",
     "prettier": "^3.4.2",
-    "typescript": "^5.3.3",
-    "vue": "^3.4.3",
-    "vue-router": "^4.2.5",
-    "vue-tsc": "^2.2.0"
+    "typescript": "^5.7.3",
+    "vue-tsc": "^2.1.10"
   }
 }
