--- a/vue_nuxt/package.json
+++ b/vue_nuxt/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.15",
-    "nuxt": "^3.15.1",
+    "nuxt": "3.15.2",
     "quasar": "^2.17.6",
     "vue": "latest",
     "vue-router": "latest"
