--- a/vue_nuxt/package.json
+++ b/vue_nuxt/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^9.1.2",
     "@quasar/extras": "^1.16.15",
     "nuxt": "3.15.2",
     "quasar": "^2.17.6",
