--- a/vue_nuxt/package.json
+++ b/vue_nuxt/package.json
@@ -31,7 +31,9 @@
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.9",
+    "pinia": "^2.1.7",
     "quasar": "^2.14.2"
   }
 }
